add patch alert
